# openmalaria

./: .gitignore  .gitmodules  .kateproject  .travis.yml  CMakeLists.txt  Dockerfile  FindBOINC.cmake  FindGSL.cmake  FindPython.cmake  FindXERCESC.cmake  FindXSD.cmake  FindXercesC.cmake  FindXsd.cmake  FindZ.cmake  INSTALL  Makefile.am  Makefile.in  Nv0-Initial.txt  OpenMalaria-41.0.eb  README  README.gzstream  README.md  README.txt  SConstruct  TODO_fitting  TODO_seas  appveyor.yml  autoRegressionParameters.csv  autogen.sh  build.sh  compareLogsFloat.py  config.doxygen  configure  configure.ac  fourier.html  index.html  intro.html  malariaModel2005C++.sln  malariaModel2005C++.vcproj  malariaModel2005C++BOINC.vcproj  (+60 more)
contrib/: CMakeLists.txt  README.txt  chacha.h
contrib/R_nmath/: nmath.h  qnorm.cpp  qnorm.h
contrib/floating_point_utilities_v3/: boost.css  index.htm
graphics/: AlphaConfiguration.cpp  AlphaConfiguration.h  Anopheles.cpp  Anopheles.h  AnophelesRenderer.cpp  BoincBridge.h  Bridge.h  CallBackBridge.cpp  ChartRenderer.cpp  ChartRenderer.h  ChartRendererMacros.h  Color.cpp  Color.h  CubeRenderer.cpp  CubeRenderer.h  DataConfiguration.h  Debug.cpp  Debug.h  DemoConfiguration.cpp  DemoConfiguration.h  Display.cpp  Display.h  Environment.cpp  Environment.h  EnvironmentController.cpp  EnvironmentController.h  FieldDisplay.cpp  FieldDisplay.h  Font.cpp  Font.h  GL_Window.cpp  GL_Window.h  GraphicsBridge.cpp  GraphicsBridge.h  Key.h  KeyHandler.cpp  KeyHandler.h  KeyListener.h  Label.cpp  Label.h  (+65 more)
graphics/meshes/: anopheles_004.mtl
model/: AgeGroupData.cpp  BoincWrapper.cpp  CMakeLists.txt  CaseManagementModel.cpp  DescriptiveInfection.cpp  DummyInfection.cpp  DummyWithinHostModel.cpp  EntoIntervention.cpp  FindGSL.cmake  FindZLib.cmake  GSLWrapper.cpp  Global.cpp  Global.h  Human.cpp  Infection.cpp  InfectionIncidenceModel.cpp  Interventions.cpp  Makefile.am  Makefile.in  Model.cpp  Model.h  NeonatalMortality.cpp  NewCaseManagement.cpp  OldCaseManagement.cpp  OldIPTInfection.cpp  OldIPTWithinHostModel.cpp  OldITNWithinHostModel.cpp  Parameters.cpp  Parameters.h  Population.cpp  Population.h  PopulationAgeStructure.cpp  PopulationAgeStructure.h  PopulationStats.cpp  PopulationStats.h  PresentationModel.cpp  SimTime.h  Simulation.cpp  Simulator.cpp  Simulator.h  (+38 more)
model/Clinical/: CM5DayCommon.cpp  CM5DayCommon.h  CMDecisionTree.cpp  CMDecisionTree.h  CMakeLists.txt  CaseManagementCommon.cpp  CaseManagementCommon.h  ClinicalModel.cpp  ClinicalModel.h  DecisionTree5Day.cpp  DecisionTree5Day.h  Diagnostic.cpp  ESCaseManagement.cpp  ESCaseManagement.h  ESDecisionTree.cpp  ESDecisionTreeRandom.cpp  ESDecisionValue.cpp  Episode.cpp  Episode.h  EventScheduler.cpp  EventScheduler.h  ImmediateOutcomes.cpp  ImmediateOutcomes.h  Makefile.am  Makefile.in  OldCaseManagement.cpp  event.cpp  parser.cpp
model/Drug/: CMakeLists.txt  Dose.cpp  (+12 more)
parser/: CFR.cpp  CFRGroup.cpp  DOMParser.cpp  DOMTreeErrorReporter.cpp  EIRDaily.cpp  IPTDescription.cpp  IRS.cpp  ITNDescription.cpp  Makefile.am  ageGroup.cpp  ageSpecific.cpp  allele.cpp  anopheles.cpp  byAgeItems.cpp  caseManagement.cpp  caseManagements.cpp  content.cpp  continuous.cpp  converter.cpp  decision.cpp  decisions.cpp  demography.cpp  distribution.cpp  document.cpp  documentParameter.cpp  doubleNode.cpp  drugRegimen.cpp  endPoint.cpp  entoData.cpp  entryPoint.cpp  genoType.cpp  group.cpp  healthSystem.cpp  inputData.cpp  intNode.cpp  intervention.cpp  interventions.cpp  item.cpp  mass.cpp  medicate.cpp  (+14 more)
schema/: CMakeLists.txt  WriteParamDocu.py  demography.xsd  entomology.xsd  healthSystem.xsd  interventions.xsd  monitoring.xsd  pharmacology.xsd  policy.md  policy.txt  scenario.xsd  scenario_11.xsd  scenario_12.xsd  scenario_13.xsd  scenario_15.xsd  scenario_16.xsd  scenario_17.xsd  scenario_18.xsd  scenario_19.xsd  scenario_2.xsd  scenario_20.xsd  scenario_21.xsd  scenario_22.xsd  scenario_23.xsd  scenario_26.xsd  scenario_27.xsd  scenario_28.xsd  scenario_29.xsd  scenario_3.xsd  scenario_30.xsd  scenario_30_3.xsd  scenario_31.xsd  scenario_32.xsd  scenario_33.xsd  scenario_34.xsd  scenario_35.xsd  scenario_36.xsd  scenario_37.xsd  scenario_38.xsd  scenario_39.xsd  (+15 more)
test/: CMakeLists.txt  Nv0scenarioFullInterventionSet.txt  Nv0scenarioVector.txt  Scenarios.txt  approxEqual.py  autoRegressionParameters.csv  compareOutput.py  compareOutputsFloat.py  densities.csv  original1.txt  original10.txt  original11.txt  original12.txt  original2.txt  original3.txt  original4.txt  original5.txt  original6.txt  original7.txt  original9.txt  originalCevCq.txt  originalDummyPKPD.txt  originalESCGood.txt  originalESCMTest.txt  originalEffectiveDrug.txt  originalEmpirical.txt  originalFullInterventionSet.txt  originalIPT.txt  originalMolineaux.txt  originalNamawalaArabiensis.txt  originalUninfect.txt  originalVecConstEIR.txt  originalVecFullTest.txt  originalVecFullTestII.txt  originalVecFullTestIIPTH.txt  originalVecTest.txt  originalVecTestII.txt  originalVector.txt  run.py  run.sh  (+94 more)
unittest/: AgeGroupDataSuite.h  AgeGroupInterpolationSuite.h  AgeGroupInterpolationSuite.py  AnophelesModelSuite.h  AnophelesModelSuite.yaml  CMDecisionTreeSuite.h  CMakeLists.txt  ChaChaSuite.h  CheckpointSuite.h  DecayFunctionSuite.h  DecayFunctionSuite.py  DescriptiveInfectionSuite.h  DummyInfectionSuite.h  DummyPkPdDrugSuite.h  ESCaseManagementSuite.h  ESDecisionTreeSuite.h  EmpiricalInfectionSuite.h  ExtraAsserts.h  HoshenPkPdSuite.h  InfectionImmunitySuite.h  LSTMPkPdSuite.h  MLCS_AdultMosqConstantRA.txt  MLCS_EmergenceRateConstantRA.txt  MLCS_EmergenceRatePeriodicRA.txt  MLCS_OvipositingAdultsPeriodicRA.txt  MLCS_PeriodicResourceAvailability.txt  MolineauxCirDens.txt  MolineauxInfectionSuite.h  MolineauxStatsOrig  MolineauxStatsOrigRG  MolineauxStatsPairwise  MolineauxStatsPairwiseRG  MosqLifeCycleSuite.h  PennyCirDens.txt  PennyInfectionSuite.h  PennySeqDens.txt  PerHostSuite.h  PerHostTransmissionSuite.h  PkPdComplianceSuite.h  PkPdDrugSuite.h  (+17 more)
xsdcxx/: CMakeLists.txt  FindXsd.cmake  Makefile.am  Makefile.in  inputData.cpp  readme.txt  scenario.xsd
(+985 files in other folders)
